--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
     </head>
     <body>
         <p>Hello, World!</p>
-        <ul>
-            <li>Coffee</li>
-            <li>Tea</li>
-            <li>Milk</li>
-        </ul>
-        <p>This text contains<br>a line break.</p>
+        <button type="button">Click Me!</button>
     </body>
 </html>
